# python-practice

./: docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: webhook.py
app/core/: config.py  state.py
app/schemas/: transaction.py
app/services/: blockchain.py
app/workers/: manager.py  processor.py
