[project]
name = "async"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.127.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyngrok>=7.5.0",
    "redis>=7.1.0",
    "uvicorn[standard]>=0.40.0",
    "web3>=7.14.0",
]

[tool.poe.tasks]
dev = "uvicorn app.main:app --reload --host 127.0.0.1 --port 8000"

start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"

worker = "python -m app.workers.manager"

lint = "ruff check app"
test = "pytest"

[dependency-groups]
dev = [
    "poethepoet>=0.39.0",
]
